# fork-smoldb

./: .gitignore  Options.cmake
src/: entry.c  retval.h
src/cli/: CMakeLists.txt  cli-handler.c  cli-handler.h  cli-parser.cpp  cli-parser.h  cli-parser.hpp
src/general/: general.h  general.h.in  retval.h  sqltypes.h
unittest/: CMakeLists.txt
